# mailmind

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml  sample.mbox  test.sh
mailmind/: ann.py  applemail_indexer.py  attachments.py  cli.py  config.py  constraints.py  db.py  embedder.py  hybrid.py  indexer.py  llm.py  mbox_indexer.py  planner.py  progress.py  search.py  summarizer.py  tables.py  workers.py
mailmind/parsing/: docs.py
mailmind/utils/: date_nlp.py  fts.py  text.py
